# Autonomous-teleoperation-algorithm-for-turtlebot3-ROS1-ROS2-

./: README.md  package.xml
Autonomous package (ros1)/beginner_tutorials/: CMakeLists.txt  package.xml
Autonomous package (ros1)/beginner_tutorials/src/: g2g_obs_avoidance_1.py  g2g_obs_avoidance_software.py  try.py
Autonomous_package/src/: 3d_cam.cpp  Autonomous_hardware.cpp  arrow.py  autex.cpp  autex_hardware.cpp  autonomous.cpp  first_node.cpp  g2g_obs_avoidance_software.cpp  gps.cpp  tb_vyom.cpp
Teleoperation 4 wheeled rover (ESP32)/: micro_ros.cpp
Teleoperation 4 wheeled rover (ESP32)/Arduino code/: reset_esp32.py
Teleoperation 4 wheeled rover (ESP32)/Arduino code/RoboticArmNode/: manipulator.ino
Teleoperation 4 wheeled rover (ESP32)/Arduino code/combined_drive_arm/: combined_drive_arm.ino
Teleoperation 4 wheeled rover (ESP32)/Arduino code/drive_node/: drive.ino
Teleoperation 4 wheeled rover (ESP32)/src/: combined_drive_arm.cpp  ps4.cpp  ps4_try.cpp
Teleoperation of 4 wheeled bot (ESP32)/: CMakeLists.txt
Teleoperation of 4 wheeled bot (ESP32)/Arduino code/armNode/: armNode.ino
Teleoperation of 4 wheeled bot (ESP32)/src/: ps4.cpp
cam_launch/: package.xml  setup.py
cam_launch/launch/: webcam_launch.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.1
install/micro_ros_agent/lib/micro_ros_agent/: micro_ros_agent
install/micro_ros_agent/share/ament_index/resource_index/parent_prefix_path/: micro_ros_agent
install/micro_ros_agent/share/micro_ros_agent/: package.sh
install/micro_ros_msgs/share/micro_ros_msgs/: local_setup.sh  package.sh
install/micro_ros_setup/share/micro_ros_setup/: local_setup.sh  package.sh
log/: latest_build
my_bot/description/: 6otu.urdf.xacro  6otu_description.xacro  camera.xacro  gazebo_control.xacro  lidar.xacro
my_bot/launch/: launch_sim.launch.py  rsp.launch.py
my_launch_files/: setup.cfg
py_pubsub/: package.xml  setup.py
py_pubsub/py_pubsub/: cam.py  cam2.py  feed.py  fib.py  fibo.py  reset_esp32.py  ttlsim.py
teleoperation of 4 wheeled bot using micro-ros/: CMakeLists.txt
teleoperation of 4 wheeled bot using micro-ros/arduino _miro-ros_esp32/: ps4_final.ino
teleoperation of 4 wheeled bot using micro-ros/src/: ps4.cpp  ps4_try.cpp
ydlidar_ros2_driver/launch/: launch.py  ydlidar_launch_view.py
ydlidar_ros2_driver/params/: ydlidar.yaml
